--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "nuxt-app",
+  "name": "omelet",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,8 +11,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/sanity": "^1.12.1",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@nuxtjs/dotenv": "^1.4.2"
   }
 }
