--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -17,6 +17,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
-    "@nuxtjs/dotenv": "^1.4.2"
+    "@nuxtjs/dotenv": "^1.4.2",
+    "sass": "^1.79.4"
   }
 }
