--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@nuxtjs/dotenv": "^1.4.2",
-    "sass": "^1.79.4"
+    "sass": "1.58.3",
+    "sass-loader": "^12.1.0"
   }
 }
