--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -11,8 +11,10 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxtjs/sanity": "^1.12.1",
+    "@nuxtjs/sanity": "^1.12.2",
+    "@nuxtjs/sitemap": "^6.1.2",
     "nuxt": "^3.13.0",
+    "v-body-scroll-lock": "^1.1.3",
     "vue": "latest",
     "vue-router": "latest"
   },
