--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@nuxtjs/sanity": "^1.12.2",
     "@nuxtjs/sitemap": "^6.1.2",
+    "@pinia/nuxt": "^0.5.5",
     "nuxt": "^3.13.0",
+    "pinia": "^2.2.4",
     "v-body-scroll-lock": "^1.1.3",
     "vue": "latest",
     "vue-router": "latest"
@@ -22,5 +24,8 @@
     "@nuxtjs/dotenv": "^1.4.2",
     "sass": "1.58.3",
     "sass-loader": "^12.1.0"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
