--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -17,11 +17,13 @@
     "nuxt": "^3.13.0",
     "pinia": "^2.2.4",
     "v-body-scroll-lock": "^1.1.3",
+    "v3-scroll-lock": "^1.3.2",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
     "@nuxtjs/dotenv": "^1.4.2",
+    "nuxt-anchorscroll": "^1.0.3",
     "sass": "1.58.3",
     "sass-loader": "^12.1.0"
   },
