--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -21,7 +21,8 @@
     "v-body-scroll-lock": "^1.1.3",
     "v3-scroll-lock": "^1.3.2",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue3-carousel": "^0.5.0"
   },
   "devDependencies": {
     "@nuxtjs/dotenv": "^1.4.2",
