--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@nuxt/image": "^1.8.1",
+    "@nuxt/scripts": "^0.9.5",
     "@nuxtjs/sanity": "^1.12.2",
     "@nuxtjs/sitemap": "^6.1.2",
     "@pinia/nuxt": "^0.5.5",
+    "gsap": "^3.12.5",
     "lodash": "^4.17.21",
     "nuxt": "^3.13.0",
     "pinia": "^2.2.4",
