--- a/sanity/package.json
+++ b/sanity/package.json
@@ -23,6 +23,7 @@
     "sanity-plugin-iframe-pane": "^3.1.6",
     "sanity-plugin-media": "^2.3.2",
     "sanity-plugin-prefixed-slug": "^2.0.0",
+    "sanity-plugin-tags": "^2.1.0",
     "sanity-plugin-vimeo-field": "^1.0.1",
     "styled-components": "^6.1.8"
   },
