--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@nuxt/image": "^1.8.1",
-    "@nuxt/scripts": "^0.9.5",
     "@nuxtjs/sanity": "^1.12.2",
     "@nuxtjs/sitemap": "^6.1.2",
     "@pinia/nuxt": "^0.5.5",
@@ -24,6 +23,7 @@
     "v3-scroll-lock": "^1.3.2",
     "vue": "latest",
     "vue-router": "latest",
+    "vue-vimeo-player": "^1.1.2",
     "vue3-carousel": "^0.5.0"
   },
   "devDependencies": {
