--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/sanity": "^1.12.2",
     "@nuxtjs/sitemap": "^6.1.2",
     "@pinia/nuxt": "^0.5.5",
+    "@portabletext/to-html": "^2.0.13",
     "gsap": "^3.12.5",
     "lodash": "^4.17.21",
     "nuxt": "^3.13.0",
