--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/sitemap": "^6.1.2",
     "@pinia/nuxt": "^0.5.5",
     "@portabletext/to-html": "^2.0.13",
+    "@vueuse/core": "^11.2.0",
     "gsap": "^3.12.5",
     "lodash": "^4.17.21",
     "nuxt": "^3.13.0",
