--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -17,12 +17,11 @@
     "@pinia/nuxt": "^0.5.5",
     "@portabletext/to-html": "^2.0.13",
     "@vueuse/core": "^11.2.0",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "gsap": "^3.12.5",
     "lodash": "^4.17.21",
     "nuxt": "^3.13.0",
     "pinia": "^2.2.4",
-    "v-body-scroll-lock": "^1.1.3",
-    "v3-scroll-lock": "^1.3.2",
     "vue": "latest",
     "vue-router": "latest",
     "vue-vimeo-player": "^1.1.2",
