--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -21,6 +21,7 @@
     "gsap": "^3.12.5",
     "lodash": "^4.17.21",
     "nuxt": "^3.13.0",
+    "nuxt-gtag": "^3.0.1",
     "pinia": "^2.2.4",
     "vue": "latest",
     "vue-router": "latest",
