--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -11,6 +11,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@georgedoescode/spline": "^1.0.1",
     "@nuxt/image": "^1.8.1",
     "@nuxtjs/sanity": "^1.12.2",
     "@nuxtjs/sitemap": "^6.1.2",
@@ -23,6 +24,7 @@
     "nuxt": "^3.13.0",
     "nuxt-gtag": "^3.0.1",
     "pinia": "^2.2.4",
+    "simplex-noise": "^4.0.3",
     "vue": "latest",
     "vue-router": "latest",
     "vue-vimeo-player": "^1.1.2",
